fix(HorizontalCellShowMore): replace stretched to centered

--- a/packages/vkui/src/components/HorizontalScroll/HorizontalCellShowMore/HorizontalCellShowMore.module.css
+++ b/packages/vkui/src/components/HorizontalScroll/HorizontalCellShowMore/HorizontalCellShowMore.module.css
@@ -7,7 +7,7 @@
   margin-inline-start: calc(-1 * var(--vkui_internal--side_cell_gap));
 }
 
-.HorizontalCellShowMore--stretched {
+.HorizontalCellShowMore--centered {
   margin-block: auto;
 }
 
